// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`布局Column快照测试 栅格布局 1`] = `
<div
  className="sc-bdvvtL fGKiXH sinoui-row"
>
  <div
    className="sc-gsDKAQ bpEaLx sinoui-column"
  >
    列
  </div>
</div>
`;

exports[`布局Column快照测试 默认 1`] = `
<div
  className="sc-bdvvtL fGKiXH sinoui-row"
>
  <div
    className="sc-gsDKAQ kEQgTr sinoui-column"
  >
    列
  </div>
</div>
`;
